--- a/HW/Views/Catalog/Categories.cshtml
+++ b/HW/Views/Catalog/Categories.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Categories";
+    ViewData["Title"] = "Категории";
 }
 
 <form method="post">
     Id: <input type="text" name="id" required />
     <br/>
     Имя: <input type="text" name="name" />
-    <br/>
+    <br/>    
     <input type="submit" name="submit" required value="Создать"/>
 </form>
 
