--- a/HW/Views/Catalog/Categories.cshtml
+++ b/HW/Views/Catalog/Categories.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Категории";
 }
 
-<form method="post">
+<form 
+    method="post">
     Id: <input type="text" name="id" required />
     <br/>
     Имя: <input type="text" name="name" />
