--- a/HW/Views/Shared/_Layout.cshtml
+++ b/HW/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="Products">Продукция</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="SendMessage">SendMessage</a>
+                        </li>
                     </ul>
                 </div>
             </div>
